# mentoria-lead

./: README.md  pyproject.toml
activities/: final_evaluation.ipynb  form1.ipynb  form2.ipynb  reforcement_learning_taxi.ipynb
exemples/: AI_python.ipynb  Atorcritico.ipynb  ator_critico.py  dom.ipynb  example_nltk.ipynb  exe1.ipynb  pratica01.ipynb  reste.ipynb
