[tool.poetry]
name = "mentoria-lead"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mentoria_lead"}]

[tool.poetry.dependencies]
python = "3.10.6"
pandas = "^1.5.1"
sklearn = "^0.0"
yellowbrick = "^1.5"


[tool.poetry.group.dev.dependencies]
tensorflow = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
