[tool.poetry]
name = "mentoria-lead"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mentoria_lead"}]

[tool.poetry.dependencies]
python = "3.10.6"
pandas = "^1.5.1"
sklearn = "^0.0"
yellowbrick = "^1.5"
Gymnasium = "^0.26.3"
tensorflow = "^2.11.0"
tqdm = "^4.64.1"
mujoco = "^2.3.0"
imageio = "^2.22.4"
gym = "^0.26.2"
nltk = "^3.7"
spacy = "^3.4.3"
seaborn = "^0.12.1"


[tool.poetry.group.dev.dependencies]
tensorflow = "^2.10.0"
flake8 = "^6.0.0"
ipykernel = "^6.17.1"
pygame = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
