[tool.poetry]
name = "mentoria-lead"
version = "0.1.0"
description = ""
authors = ["keven silva <keven.almeida.8179@gmail.com>"]
readme = "README.md"
packages = [{include = "mentoria_lead"}]

[tool.poetry.dependencies]
python = "3.10.6"
sklearn = "^0.0.post1"
pandas = "^1.5.2"
nltk = "^3.7"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
scikit-learn = "^1.2.0"
setuptools = "^65.6.3"
tensorflow = "^2.11.0"
spacy = "^3.4.3"
wordcloud = "^1.8.2.2"
bs4 = "^0.0.1"
lxml = "^4.9.1"
Unidecode = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
